<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DB_COMMAND_DISCONNECTING_STATE" Id="{04f86573-1447-45fa-af61-017d555b8d41}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE DB_COMMAND_DISCONNECTING_STATE :
(
	IDLING,
	DATA_SET_RELEASING,
	DISCONNECTING
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>