<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DB_COMMAND_EXECUTION_PARAMETERS" Id="{0c005da1-0614-4222-96be-896c35dc8402}">
    <Declaration><![CDATA[{attribute 'enable_dynamic_creation'}	
TYPE DB_COMMAND_EXECUTION_PARAMETERS :
STRUCT
	DbId : UDINT;
	CommandText : Tc2_System.T_MaxString;
	TargetBuffer : PVOID; 
	TargetBufferSize : UDINT;
	MaxRecordsToReadAtTime : UINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>