<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DB_COMMAND_EXECUTION_STATE" Id="{64987628-3801-49d9-80dc-bb617f2c8485}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE DB_COMMAND_EXECUTION_STATE :
(
	IDLING,
	STARTING,
	CONNECTING,
	PREPARING,
	EXECUTING,
	LOADING_RESULT_DATA_SET,
	DISCONNECTING 
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>